--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title>Pixiv C</title>
+    <meta name="description" content="一个连接到 Pixiv 的实验站点"/>
     <!-- Load 3rd party scripts-->
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js" async defer></script>
   </head>
