update: change site name

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <title>Pixiv C</title>
+    <title>Pixiviz</title>
     <meta name="description" content="一个连接到 Pixiv 的实验站点"/>
     <!-- Load 3rd party scripts-->
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js" async defer></script>
   </head>
   <body>
     <noscript>
-      <strong>很抱歉，Pixiv C 需要在您浏览器启用 JavaScript 支持的情况下才能正常使用。</strong>
+      <strong>很抱歉，Pixiviz 需要在您浏览器启用 JavaScript 支持的情况下才能正常使用。</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
