update: optimize pages

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title>Pixiviz</title>
-    <meta name="description" content="一个连接到 Pixiv 的实验站点"/>
+    <meta name="description" content="一个连接到 Pixiv 的站点"/>
+    <meta name="keywords" content="pixiv,pixiviz,二次元,二次元图片,动漫插图"/>
     <!-- Load 3rd party scripts-->
-    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js" async defer></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js" async defer></script>
   </head>
   <body>
     <noscript>
