--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,17 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script ascyn defer>
+      var _mtac = {"senseHash":0,"performanceMonitor":1};
+      (function() {
+        var mta = document.createElement("script");
+        mta.src = "//pingjs.qq.com/h5/stats.js?v2.0.4";
+        mta.setAttribute("name", "MTAH5");
+        mta.setAttribute("sid", "500724877");
+        mta.setAttribute("cid", "500724878");
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(mta, s);
+      })();
+    </script>
   </body>
 </html>
