fix: wrong word

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script ascyn defer>
+    <script async defer>
       var _mtac = {"senseHash":0,"performanceMonitor":1};
       (function() {
         var mta = document.createElement("script");
