improve: action part

--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,7 @@
         s.parentNode.insertBefore(mta, s);
       })();
     </script>
+    <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
   </body>
 </html>
