--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
+    />
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
     <title>Pixiviz</title>
     <meta name="description" content="跨次元链接~，一个简单的二次元图片分享站" />
-    <meta name="keywords" content="pixiv,pixiviz,Pixiv,Pixiviz,ACG,p站,pixiv排行,二次元插图,二次元插画,动漫图片,动漫插图,动漫插画" />
+    <meta
+      name="keywords"
+      content="pixiv,pixiviz,Pixiv,Pixiviz,ACG,p站,pixiv排行,二次元插图,二次元插画,动漫图片,动漫插图,动漫插画"
+    />
   </head>
   <body>
     <noscript>
