--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(hm, s);
       })();
+      window._hmt = _hmt;
     </script>
   </body>
 </html>
