--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,15 @@
           token: '0895802c5106769622a896b6d14df337',
           behaviour: 13,
           captureConsoleLog: true,
-          trustVendor: true,
+          ignoreVendor: true,
           optimisedForSPA: true,
           useHistory: true,
+          origin: [
+            'pixiviz.pwp.app',
+            'pixiv-image.pwp.link',
+            'pixiv-image-jp.pwp.link',
+            'config.backrunner.top',
+          ],
           FPSThreshold: 8,
         };
         w.frontjsTmpData = { r: [], e: [], l: [] };
