feat: add ie detector

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
       name="keywords"
       content="pixiv,pixiviz,Pixiv,Pixiviz,ACG,p站,pixiv排行,二次元插图,二次元插画,动漫图片,动漫插图,动漫插画"
     />
+    <script type="text/javascript">
+      if (navigator.userAgent.indexOf('Trident') !== -1) {
+        alert('很抱歉，Pixiviz 不支持 Internet Explorer，请使用其他浏览器访问本站。');
+      }
+    </script>
     <script>
       // dark mode enhancement
       (() => {
