feat: get og tags when initializing

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
       name="keywords"
       content="pixiv,pixiviz,Pixiv,Pixiviz,ACG,p站,pixiv排行,二次元插图,二次元插画,动漫图片,动漫插图,动漫插画"
     />
+    <meta id="og-title" property="og:title" content="Pixiviz" />
+    <meta id="og-desc" property="og:description" content="跨次元链接~，一个简单的二次元图片分享站" />
+    <meta id="og-image" property="og:image" content="<%= BASE_URL %>favicon.png" />
+    <meta id="og-url" property="og:url" content="">
+    <meta property="Entertainment" content="article" />
     <script src="<%= BASE_URL %>js/gif.js"></script>
     <script type="text/javascript">
       if (navigator.userAgent.indexOf('Trident') !== -1) {
