feat: finalize og tags support

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta id="og-title" property="og:title" content="Pixiviz" />
     <meta id="og-desc" property="og:description" content="跨次元链接~，一个简单的二次元图片分享站" />
     <meta id="og-image" property="og:image" content="<%= BASE_URL %>favicon.png" />
-    <meta id="og-url" property="og:url" content="">
+    <meta id="og-url" property="og:url" content="<%= __ROOT_URL__ %>">
     <meta property="Entertainment" content="article" />
     <script src="<%= BASE_URL %>js/gif.js"></script>
     <script type="text/javascript">
