--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,12 @@
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
     <title>Pixiviz</title>
-    <meta id="meta-desc" name="description" content="跨次元链接~，一个简单的二次元图片分享站" />
+    <meta
+      id="meta-desc"
+      name="description"
+      itemprop="description"
+      content="跨次元链接~，一个简单的二次元图片分享站"
+    />
     <meta
       name="keywords"
       content="pixiv,pixiviz,Pixiv,Pixiviz,ACG,p站,pixiv排行,二次元插图,二次元插画,动漫图片,动漫插图,动漫插画"
@@ -17,9 +22,13 @@
     <meta id="meta-name" itemprop="name" content="Pixiviz" />
     <meta id="meta-image" itemprop="image" content="<%= BASE_URL %>favicon.png" />
     <meta id="og-title" property="og:title" content="Pixiviz" />
-    <meta id="og-desc" property="og:description" content="跨次元链接~，一个简单的二次元图片分享站" />
+    <meta
+      id="og-desc"
+      property="og:description"
+      content="跨次元链接~，一个简单的二次元图片分享站"
+    />
     <meta id="og-image" property="og:image" content="<%= BASE_URL %>favicon.png" />
-    <meta id="og-url" property="og:url" content="<%= __ROOT_URL__ %>">
+    <meta id="og-url" property="og:url" content="<%= __ROOT_URL__ %>" />
     <meta property="Entertainment" content="article" />
     <script src="<%= BASE_URL %>js/gif.js"></script>
     <script type="text/javascript">
