--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,16 @@
         }
       })();
     </script>
+    <script>
+      // qq tester
+      window.isInQQ = navigator.userAgent.includes('QQ/');
+      if (window.isInQQ) {
+        const script = document.createElement('script');
+        script.src = '//open.mobile.qq.com/sdk/qqapi.js?_bid=152';
+        const s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(hm, s);
+      }
+    </script>
   </head>
   <body>
     <noscript>
