--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
         const script = document.createElement('script');
         script.src = '//open.mobile.qq.com/sdk/qqapi.js?_bid=152';
         const s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(hm, s);
+        s.parentNode.insertBefore(script, s);
       }
     </script>
   </head>
