feat: upgrade styles

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,13 @@
     <meta id="og-image" property="og:image" content="<%= BASE_URL %>favicon.png" />
     <meta id="og-url" property="og:url" content="<%= __ROOT_URL__ %>" />
     <meta property="Entertainment" content="article" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
     <script src="<%= BASE_URL %>js/gif.js"></script>
     <script type="text/javascript">
       if (navigator.userAgent.indexOf('Trident') !== -1) {
