fix: filter strange log

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,9 @@
             if (log.msg && log.msg.includes('hm.baidu.com/hm.gif')) {
               return false;
             }
+            if (log.msg && log.msg.includes('MyAppGetLink')) {
+              return false;
+            }
             return log;
           },
         });
