feat: update fonts

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://gfonts.pwp.link/css2?family=Kosugi+Maru&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Noto+Sans+SC:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
       crossorigin="anonymous"
     />
