feat: use gfont proxy

--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,9 @@
     <meta id="og-image" property="og:image" content="<%= BASE_URL %>favicon.png" />
     <meta id="og-url" property="og:url" content="<%= __ROOT_URL__ %>" />
     <meta property="Entertainment" content="article" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://gfonts.pwp.link" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Noto+Sans+SC:wght@100;300;400;500;700;900&display=swap"
+      href="https://gfonts.pwp.link/css2?family=Kosugi+Maru&family=Noto+Sans+SC:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
       crossorigin="anonymous"
     />
