feat: cache optimize

--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,21 @@
     <meta id="og-image" property="og:image" content="<%= BASE_URL %>favicon.png" />
     <meta id="og-url" property="og:url" content="<%= __ROOT_URL__ %>" />
     <meta property="Entertainment" content="article" />
+    <meta http-equiv="x-dns-prefetch-control" content="on" />
     <link rel="preconnect" href="https://gfonts.pwp.link" crossorigin />
     <link
       href="https://gfonts.pwp.link/css2?family=Kosugi+Maru&family=Noto+Sans+SC:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://pixiv-image.pwp.link" crossorigin />
+    <link rel="preconnect" href="https://pixiv-image-jp.pwp.link" crossorigin />
+    <link rel="preconnect" href="https://pixiv-image-tc.pwp.link" crossorigin />
+    <link rel="preconnect" href="https://pixiv-image-lv.pwp.link" crossorigin />
+    <link rel="preconnect" href="https://pixiviz-api-hk.pwp.link" crossorigin />
+    <link rel="preconnect" href="https://pixiviz-api-tc.pwp.link" crossorigin />
+    <link rel="preconnect" href="https://pixiviz-api-us.pwp.link" crossorigin />
+    <link rel="preconnect" href="https://pixiviz-api-rn.pwp.link" crossorigin />
     <script src="<%= BASE_URL %>js/gif.js"></script>
     <script type="text/javascript">
       if (navigator.userAgent.indexOf('Trident') !== -1) {
