feat: update meta

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     />
     <meta
       name="keywords"
-      content="pixiv,pixiviz,Pixiv,Pixiviz,ACG,p站,pixiv排行,二次元插图,二次元插画,动漫图片,动漫插图,动漫插画"
+      content="pixiviz,Pixiviz,ACG,插图排行,插画排行,二次元插图,二次元插画,动漫图片,动漫插图,动漫插画"
     />
     <meta id="meta-name" itemprop="name" content="Pixiviz" />
     <meta id="meta-image" itemprop="image" content="<%= BASE_URL %>favicon.png" />
