--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,10 @@
         alert('很抱歉，Pixiviz 不支持 Internet Explorer，请使用其他浏览器访问本站。');
       }
     </script>
-    <script src="https://cdn-go.cn/aegis/aegis-sdk/latest/aegis.min.js"></script>
+    <script
+      src="https://cdn-go.cn/aegis/aegis-sdk/latest/aegis.min.js"
+      crossorigin="anonymous"
+    ></script>
     <script>
       (function() {
         if (window.location.hostname !== 'pixiviz.pwp.app') {
