fix: wrong rotate on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
     <link rel="preconnect" href="https://pixiv-image.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiv-image-jp.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiv-image-tc.pwp.link" crossorigin />
+    <link rel="preconnect" href="https://pixiv-image-lv.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiviz-api-hk.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiviz-api-tc.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiviz-api-us.pwp.link" crossorigin />
