--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <link rel="preconnect" href="https://pixiv-image-jp.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiv-image-tc.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiv-image-lv.pwp.link" crossorigin />
-    <link rel="preconnect" href="https://pixiv-image-cr.pwp.link" crossorigin />
+    <link rel="preconnect" href="https://pixiv-image-cc.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiviz-api-hk.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiviz-api-tc.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiviz-api-us.pwp.link" crossorigin />
