fix: collection storage

--- a/public/index.html
+++ b/public/index.html
@@ -68,9 +68,9 @@
           spa: true,
           reportApiSpeed: true,
           reportAssetSpeed: true,
-          random: 0.3,
+          random: 0.2,
           delay: 3000,
-          repet: 3,
+          repeat: 3,
           api: {
             retCodeHandler() {
               return {
