--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,7 @@
       itemprop="description"
       content="跨次元链接~，一个简单的二次元图片分享站"
     />
-    <meta
-      name="keywords"
-      content="pixiviz,Pixiviz,ACG,插图排行,插画排行,二次元插图,二次元插画,动漫图片,动漫插图,动漫插画"
-    />
+    <meta name="keywords" content="ACG,插图排行,插画排行,二次元插画,动漫图片,动漫插图,动漫插画" />
     <meta id="meta-name" itemprop="name" content="Pixiviz" />
     <meta id="meta-image" itemprop="image" content="<%= BASE_URL %>favicon.png" />
     <meta id="og-title" property="og:title" content="Pixiviz" />
@@ -49,7 +46,7 @@
     <script src="<%= BASE_URL %>js/gif.js"></script>
     <script type="text/javascript">
       if (navigator.userAgent.indexOf('Trident') !== -1) {
-        alert('很抱歉，Pixiviz 不支持 Internet Explorer，请使用其他浏览器访问本站。');
+        alert('很抱歉，站点不支持 Internet Explorer，请使用其他浏览器访问本站。');
       }
     </script>
     <script
@@ -118,7 +115,7 @@
   </head>
   <body>
     <noscript>
-      <strong>很抱歉，Pixiviz 需要在您浏览器启用 JavaScript 支持的情况下才能正常使用。</strong>
+      <strong>很抱歉，站点需要在您浏览器启用 JavaScript 支持的情况下才能正常使用。</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
