--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <link rel="preconnect" href="https://pixiv-image.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiv-image-jp.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiv-image-tc.pwp.link" crossorigin />
-    <link rel="preconnect" href="https://pixiv-image-lv.pwp.link" crossorigin />
+    <link rel="preconnect" href="https://pixiv-image-us.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiv-image-cc.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiviz-api-hk.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiviz-api-tc.pwp.link" crossorigin />
