--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,45 @@
     <noscript>
       <strong>很抱歉，站点需要在您浏览器启用 JavaScript 支持的情况下才能正常使用。</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <div class="loading">
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"><path stroke-dasharray="60" stroke-dashoffset="60" stroke-opacity=".3" d="M12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3Z"><animate fill="freeze" attributeName="stroke-dashoffset" dur="1.3s" values="60;0"/></path><path stroke-dasharray="15" stroke-dashoffset="15" d="M12 3C16.9706 3 21 7.02944 21 12"><animate fill="freeze" attributeName="stroke-dashoffset" dur="0.3s" values="15;0"/><animateTransform attributeName="transform" dur="1.5s" repeatCount="indefinite" type="rotate" values="0 12 12;360 12 12"/></path></g></svg>
+        <span>请稍候，Pixiviz 正在加载中...</span>
+      </div>
+      <style>
+        .dark { background: #161616 }
+        .dark > body > #app {
+          background: #161616;
+        }
+
+        #app {
+          width: 100%;
+          height: 100vh;
+          position: relative;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          overflow: hidden;
+        }
+
+        .loading {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+
+          svg {
+            font-size: 40px;
+            color: #DA7A85;
+            margin-bottom: 12px;
+          }
+          span {
+            font-size: 16px;
+            color: #DA7A85;
+          }
+        }
+      </style>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
