feat: add site tracker

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -32,12 +32,9 @@
     <link rel="preconnect" href="https://pixiv-image.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiv-image-jp.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiv-image-tc.pwp.link" crossorigin />
-    <link rel="preconnect" href="https://pixiv-image-us.pwp.link" crossorigin />
-    <link rel="preconnect" href="https://pixiv-image-cc.pwp.link" crossorigin />
-    <link rel="preconnect" href="https://pixiviz-api-hk.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiviz-api-tc.pwp.link" crossorigin />
     <link rel="preconnect" href="https://pixiviz-api-rn.pwp.link" crossorigin />
-    <script src="<%= BASE_URL %>js/gif.js"></script>
+    <script src="<%= BASE_URL %>js/gif.js" async defer></script>
     <script type="text/javascript">
       if (navigator.userAgent.indexOf('Trident') !== -1) {
         alert('很抱歉，站点不支持 Internet Explorer，请使用其他浏览器访问本站。');
@@ -74,11 +71,34 @@
     </noscript>
     <div id="app">
       <div class="loading">
-        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"><path stroke-dasharray="60" stroke-dashoffset="60" stroke-opacity=".3" d="M12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3Z"><animate fill="freeze" attributeName="stroke-dashoffset" dur="1.3s" values="60;0"/></path><path stroke-dasharray="15" stroke-dashoffset="15" d="M12 3C16.9706 3 21 7.02944 21 12"><animate fill="freeze" attributeName="stroke-dashoffset" dur="0.3s" values="15;0"/><animateTransform attributeName="transform" dur="1.5s" repeatCount="indefinite" type="rotate" values="0 12 12;360 12 12"/></path></g></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+          <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2">
+            <path
+              stroke-dasharray="60"
+              stroke-dashoffset="60"
+              stroke-opacity=".3"
+              d="M12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3Z"
+            >
+              <animate fill="freeze" attributeName="stroke-dashoffset" dur="1.3s" values="60;0" />
+            </path>
+            <path stroke-dasharray="15" stroke-dashoffset="15" d="M12 3C16.9706 3 21 7.02944 21 12">
+              <animate fill="freeze" attributeName="stroke-dashoffset" dur="0.3s" values="15;0" />
+              <animateTransform
+                attributeName="transform"
+                dur="1.5s"
+                repeatCount="indefinite"
+                type="rotate"
+                values="0 12 12;360 12 12"
+              />
+            </path>
+          </g>
+        </svg>
         <span>请稍候，Pixiviz 正在加载中...</span>
       </div>
       <style>
-        .dark { background: #161616 }
+        .dark {
+          background: #161616;
+        }
         .dark > body > #app {
           background: #161616;
         }
@@ -101,16 +121,21 @@
 
           svg {
             font-size: 40px;
-            color: #DA7A85;
+            color: #da7a85;
             margin-bottom: 12px;
           }
           span {
             font-size: 16px;
-            color: #DA7A85;
+            color: #da7a85;
           }
         }
       </style>
     </div>
+    <script
+      defer
+      src="https://analytics.alkinum.io/script.js"
+      data-website-id="5a4dfbba-0d4b-45af-afca-e962bd47f76b"
+    ></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
